--- a/TableViewDemo/TableViewDemo/Base.lproj/Main.storyboard
+++ b/TableViewDemo/TableViewDemo/Base.lproj/Main.storyboard
@@ -8,71 +8,92 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
-        <scene sceneID="Fv0-IZ-Esa">
+        <!--View Controller-->
+        <scene sceneID="GNd-0U-kA4">
             <objects>
-                <tableViewController id="YTz-29-b51" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="u8F-i8-hhw">
+                <viewController id="EZH-eN-2se" customClass="ViewController" customModule="TableViewDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="njb-fk-IB6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nmm-vM-kuK">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="bVw-4W-rU2">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bVw-4W-rU2" id="4ay-np-eiD">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="UZT-vL-VRy" kind="show" identifier="detailsSegue" id="FtX-QJ-L6j"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="qOb-IL-7g5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="WIu-Rk-0IU">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WIu-Rk-0IU" id="iaJ-31-2bh">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="lq3-M0-lZF" kind="show" identifier="detailsSegue" id="exs-sP-wgG"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="YTz-29-b51" id="Yfi-Zg-2pn"/>
-                            <outlet property="delegate" destination="YTz-29-b51" id="c4q-Y4-Ct3"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="5Cu-LB-jgI"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KMX-iV-Nle" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstItem="qOb-IL-7g5" firstAttribute="bottom" secondItem="nmm-vM-kuK" secondAttribute="bottom" id="IGW-y2-FXV"/>
+                            <constraint firstItem="nmm-vM-kuK" firstAttribute="leading" secondItem="qOb-IL-7g5" secondAttribute="leading" id="K1H-FP-7gT"/>
+                            <constraint firstItem="qOb-IL-7g5" firstAttribute="trailing" secondItem="nmm-vM-kuK" secondAttribute="trailing" id="QeO-DI-2IO"/>
+                            <constraint firstItem="nmm-vM-kuK" firstAttribute="top" secondItem="qOb-IL-7g5" secondAttribute="top" id="T39-4k-1nu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="hd7-l0-BXN"/>
+                    <connections>
+                        <outlet property="tableViewOutlet" destination="nmm-vM-kuK" id="ZzU-K9-7Ad"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZFT-F4-txS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1526" y="131"/>
+            <point key="canvasLocation" x="2426.0869565217395" y="130.58035714285714"/>
         </scene>
         <!--Details View Controller-->
-        <scene sceneID="15s-iY-qCS">
+        <scene sceneID="IQf-9Y-vWA">
             <objects>
-                <viewController id="lq3-M0-lZF" customClass="DetailsViewController" customModule="TableViewDemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Hzt-vk-fZV">
+                <viewController id="UZT-vL-VRy" customClass="DetailsViewController" customModule="TableViewDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Id8-ym-TFo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="w1e-cD-tD6"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUa-Vc-G3F">
+                                <rect key="frame" x="20" y="160" width="366" height="176"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Tlo-zs-wSL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="jnV-Cg-mbH"/>
+                    <navigationItem key="navigationItem" id="g4u-nk-oOh"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="z0i-QC-KBc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CJA-q3-RGu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2577" y="131"/>
+            <point key="canvasLocation" x="3576.811594202899" y="130.58035714285714"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="jMQ-qh-FuU">
+        <scene sceneID="wsh-ZV-PzQ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="thd-GD-K1U" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HaI-su-Z2e" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kRi-QV-a6E">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dxc-Oc-4M1">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="YTz-29-b51" kind="relationship" relationship="rootViewController" id="uP8-iU-o9T"/>
+                        <segue destination="EZH-eN-2se" kind="relationship" relationship="rootViewController" id="kXp-AR-7om"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oNA-pZ-nWZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Mk-l4-cPc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="131"/>
+            <point key="canvasLocation" x="1515.9420289855075" y="130.58035714285714"/>
         </scene>
     </scenes>
     <resources>
